syntax = "proto3";

package post;
option go_package = ".";

message Post {
  string post_id = 1;
  string title = 2;
  string description = 3;
  string creator_id = 4;
  string created_at = 5;
  string updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
  string user_id = 2;
}

message DeletePostResponse {
  bool success = 1;
}

message UpdatePostRequest {
  Post post = 1;
  string user_id = 2;
}

message UpdatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string id = 1;
  string user_id = 2;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string user_id = 3;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
}

service WallService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}
